--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<img src="asset/note3.png" width="9%" height="auto" class="object3">
 			<br/><br/>
 			<h2>Mosaik musik adalah tempat yang tepat</h2>
-			<p id='demo' style='display: none; font-size: 28px;'>Tempat yang tepat bagi kamu yang senang musik. Bagi kamu-kamu yang senang bereksplorasi dalam musik, yang percaya bahwa <i>music is my life</i>, musik adalah hidupmu. Eits, bagi kamu yang di sini karena<i>nyasar</i>, jangan khawatir, karena di sini tersimpan petualangan menyenangkan yang menantimu.</p><br/><br/><br/><br/>
+			<p id='demo' style='display: none; font-size: 28px;'>Tempat yang tepat bagi kamu-kamu yang senang bereksplorasi dalam musik, yang percaya bahwa <i>music is my life</i>, musik adalah hidupmu. Eits, bagi kamu yang di sini karena<i>nyasar</i>, jangan khawatir, karena di sini tersimpan petualangan menyenangkan yang menantimu.</p><br/><br/><br/><br/>
 			<div id=button-2 data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">     
 				<a href="#mosaik-musik" onclick="toggleText()" class="btn btn-blue btn-animation-1">Tempat yang tepat???</a>
 			</div>
@@ -42,53 +42,51 @@
 
 	<div class="container">
 		<div class="row" style="margin-top: 5%;">
-			<div class="col-md">
-				<h2>Tes</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="col-md-6" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-right">
+				<img src="asset/music-girl.jpg" width="100%" height="auto">
 			</div>
-			<div class="col-md">
+			<div class="col-md" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-left">
+				<h2>Halo, para pecinta musik!</h2>
+				<p style='font-size: 24px;'>Buat kamu yang pecinta musik ataupun bukan, kamu pasti setuju bahwa musik sudah menjadi bagian hidup kita yang penting. Dari mulai bangun tidur sampai tidur lagi, musik sudah menjadi warna dari keseharian kita.</p>
+			</div>
+		</div><br/><br/>
+
+		<div class="row" style="margin-top: 5%; margin-bottom: 5%;">
+			<div class="col-md-6" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-right">
+				<h2>Mosaik Musik hadir untuk kamu!</h2>
+				<p style='font-size: 24px;'>Musik adalah topik menarik untuk diulas. Kamu-kamu ingin tahu lebih lanjut tentang musik? Mulai dari sejarah hingga genre musik, kami hadirkan untuk kamu.</p>
+			</div>
+			<div class="col-md" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-left">
 				<img src="asset/sporty-girl.jpg" width="100%" height="auto">
 			</div>
 		</div>
-
-		<div class="row" style="margin-top: 5%; margin-bottom: 5%;">
-			<div class="col-md-6">
-				<img src="asset/music-girl.jpg" width="100%" height="auto">
-			</div>
-			<div class="col-md-6">
-				<h2>Tes</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-		</div>
-	</div>
+	</div><br/><br/><br/><br/>
 
 <div class="section">
-	<div class="container" id="section-container">
-			<div class="col-md-4" id="section-part">
-				<img src="asset/cool-music.png">
-				<h2>Tes</h2>
-				<p>Lorem ipsum dolor sit amet, </p>
+	<div class="container">
+		<div class="row">	
+			<div class="col-md-4">
+				<div id="section-part">
+					<img src="asset/cool-music.png">
+					<h2>Tes</h2>
+					<p>Lorem ipsum dolor sit amet, </p>
+				</div>
 			</div>
-			<div class="col-md-4" id="section-part">
-				<img src="asset/cool-music.png">
-				<h2>Tes</h2>
-				<p>Lorem ipsum dolor sit amet, </p>
+			<div class="col-md-4">
+				<div id="section-part">
+					<img src="asset/cool-music.png">
+					<h2>Tes</h2>
+					<p>Lorem ipsum dolor sit amet, </p>
+				</div>
 			</div>
-			<div class="col-md-4" id="section-part">
-				<img src="asset/cool-music.png">
-				<h2>Tes</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
+			<div class="col-md-4">
+				<div id="section-part">
+					<img src="asset/cool-music.png">
+					<h2>Tes</h2>
+					<p>Lorem ipsum dolor sit amet, </p>
+				</div>
 			</div>
+		</div>
 	</div>
 </div>
 
