--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
 	<div class="container">
 		<div class="row">	
 			<div class="col-md-4">
-				<div id="section-part">
-					<img src="asset/cool-music.png">
-					<h2>Tes</h2>
-					<p>Lorem ipsum dolor sit amet, </p>
+				<div id="section-part" class="card" onclick="this.classList.toggle('expanded')">
+					<div class="text2">
+    					<div class="text-content">
+							<img src="asset/cool-music.png" width="85%" height="auto">
+							<h2 class="title">Tes</h2>
+							<p class="body-text">Lorem ipsum dolor sit amet, </p>
+						</div>
+					</div>
+					<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 35" width="30"><path d="M5 30L50 5l45 25" fill="none" stroke="#000" stroke-width="5"/></svg>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -87,6 +92,20 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+
+<div class="section-2">
+	<div class="card" onclick="this.classList.toggle('expanded')">
+		<img src="asset/rock-band.jpg" width="100%"height="75%">
+  		
+  		<div class="text2">
+    		<div class="text-content">
+      			<h1 class="title">OUR LABEL</h1>
+      			<div class="body-text">has stayed the same reliable brand for nearly a century</div>
+    		</div>
+  		</div>
+  		<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 35" width="30"><path d="M5 30L50 5l45 25" fill="none" stroke="#000" stroke-width="5"/></svg>
 	</div>
 </div>
 
