--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	<div class="container">
 		<div class="row" style="margin-top: 5%;">
-			<div class="col-md-6" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-right">
+			<div class="col-md-6" data-aos-offset="150" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-right">
 				<img src="asset/music-girl.jpg" width="100%" height="auto">
 			</div>
 			<div class="col-md" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-left">
@@ -60,54 +60,40 @@
 				<img src="asset/sporty-girl.jpg" width="100%" height="auto">
 			</div>
 		</div>
-	</div><br/><br/><br/><br/>
+	</div><br/>
 
-<div class="section">
 	<div class="container">
 		<div class="row">	
 			<div class="col-md-4">
-				<div id="section-part" class="card" onclick="this.classList.toggle('expanded')">
-					<div class="text2">
-    					<div class="text-content">
-							<img src="asset/cool-music.png" width="85%" height="auto">
-							<h2 class="title">Tes</h2>
-							<p class="body-text">Lorem ipsum dolor sit amet, </p>
-						</div>
-					</div>
-					<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 35" width="30"><path d="M5 30L50 5l45 25" fill="none" stroke="#000" stroke-width="5"/></svg>
+				<div class ="section-part" id="section-part-1" data-aos-offset="250" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-up">
+					<img src="asset/time-sand.gif" style="border-radius: 50%; box-shadow: 0px 5px 10px rgba(0,0,0,0.2); margin-top: -70px; margin-left: -5px; margin-right: -15px;" width="100%" height="auto">
+					<h2>Putar Balik Waktu</h2>
+					<p>Berpetualang dari masa ke masa, zaman ke zaman, sorot balik perjalanan musik.</p>
+					<a href="./sejarah.html" target="_blank" class="btn btn-white btn-animation-1">Siap!</a>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div id="section-part">
-					<img src="asset/cool-music.png">
-					<h2>Tes</h2>
-					<p>Lorem ipsum dolor sit amet, </p>
+				<div class ="section-part" id="section-part-2" data-aos-offset="250" data-aos-delay="350" data-aos-duration="1000" data-aos="fade-up">
+					<img src="asset/globe.gif" style="border-radius: 50%; box-shadow: 0px 5px 10px rgba(0,0,0,0.2); margin-top: -70px; margin-left: -5px; margin-right: -15px;" width="100%" height="auto">
+					<h2>Menjalajahi Dunia</h2>
+					<p>Apakah mungkin menjelajahi dunia dengan musik? Dengarkan dan rasakan petualangannya.</p>
+					<a href="./genre.html" target="_blank" class="btn btn-white btn-animation-1">Ayo!</a>
 				</div>
 			</div>
 			<div class="col-md-4">
-				<div id="section-part">
-					<img src="asset/cool-music.png">
-					<h2>Tes</h2>
-					<p>Lorem ipsum dolor sit amet, </p>
+				<div class ="section-part" id="section-part-3" data-aos-offset="250" data-aos-delay="550" data-aos-duration="1000" data-aos="fade-up">
+					<img src="asset/quiz.gif" style="border-radius: 50%; box-shadow: 0px 5px 10px rgba(0,0,0,0.2); margin-top: -70px; margin-left: -5px; margin-right: -15px;" width="100%" height="auto">
+					<h2>Ikut Tantangan</h2>
+					<p>Uji pengetahuan dan wawasanmu tentang musik. Berani ikut tantangannya?</p>
+					<a href="./kuis.html" target="_blank" class="btn btn-white btn-animation-1">Berani!</a>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<div class="section-2">
-	<div class="card" onclick="this.classList.toggle('expanded')">
-		<img src="asset/rock-band.jpg" width="100%"height="75%">
-  		
-  		<div class="text2">
-    		<div class="text-content">
-      			<h1 class="title">OUR LABEL</h1>
-      			<div class="body-text">has stayed the same reliable brand for nearly a century</div>
-    		</div>
-  		</div>
-  		<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 35" width="30"><path d="M5 30L50 5l45 25" fill="none" stroke="#000" stroke-width="5"/></svg>
+	<div class="footer">
+		<p style="text-align: center; font-size: 24px;"><img src="asset/logo-transparan.png" width="24" height="auto">osaik Musik &copy; Sublime Team 2019</p>
 	</div>
-</div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
  		<script>
