Update mobile friendly

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 	</div>
 
 	<div class="footer">
-		<p style="text-align: center; font-size: 24px;"><img src="asset/logo-transparan.png" width="24" height="auto">osaik Musik &copy; Sublime Team 2019</p>
+		<p style="text-align: center; font-size: 24px;"><img src="asset/logo-transparan.png" width="24" height="auto">osaik Musik &copy; Sublime Team 2019 <br/>
+			<a href="./kontak.html" target="_blank" class="btn btn-white btn-animation-1">Hubungi Kami</a>
+		</p>
 	</div>
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
