--- a/kontak.html
+++ b/kontak.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style-kontak.css">
 	<link rel="stylesheet" type="text/css" href="contact-form-handler.php">
 	<link rel="stylesheet" href="fontawesome/css/all.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap|Righteous&display=swap">
+	<link href="https://fonts.googleapis.com/css?family=Prompt|Ubuntu+Condensed&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
 	<title>Mosaik Musik</title>
 </head>
