--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="fontawesome/css/all.css">
-	<link href="https://fonts.googleapis.com/css?family=Prompt|Ubuntu+Condensed&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Asap|Prompt&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
 			<img src="asset/note3.png" width="9%" height="auto" class="object3">
 			<br/><br/>
 			<h2>Mosaik musik adalah tempat yang tepat</h2>
-			<p id='demo' style='display: none; font-size: 28px;'>Tempat yang tepat bagi kamu-kamu yang senang bereksplorasi dalam musik, yang percaya bahwa <i>music is my life</i>, musik adalah hidupmu. Eits, bagi kamu yang di sini karena<i>nyasar</i>, jangan khawatir, karena di sini tersimpan petualangan menyenangkan yang menantimu.</p><br/><br/><br/><br/>
+			<p id='demo' style='display: none; font-size: 24px;'>Tempat yang tepat bagi kamu-kamu yang senang bereksplorasi dalam musik, yang percaya bahwa <i>music is my life</i>, musik adalah hidupmu. Eits, bagi kamu yang di sini karena<i>nyasar</i>, jangan khawatir, karena di sini tersimpan petualangan menyenangkan yang menantimu.</p><br/><br/><br/><br/>
 			<div id=button-2 data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">     
 				<a href="#mosaik-musik" onclick="toggleText()" class="btn btn-blue btn-animation-1">Tempat yang tepat???</a>
 			</div>
@@ -46,14 +46,14 @@
 			</div>
 			<div class="col-md" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-left">
 				<h2>Halo, para pecinta musik!</h2>
-				<p style='font-size: 24px;'>Buat kamu yang pecinta musik ataupun bukan, kamu pasti setuju bahwa musik sudah menjadi bagian hidup kita yang penting. Dari mulai bangun tidur sampai tidur lagi, musik sudah menjadi warna dari keseharian kita.</p>
+				<p style='font-size: 20px;'>Buat kamu yang pecinta musik ataupun bukan, kamu pasti setuju bahwa musik sudah menjadi bagian hidup kita yang penting. Dari mulai bangun tidur sampai tidur lagi, musik sudah menjadi warna dari keseharian kita.</p>
 			</div>
 		</div><br/><br/>
 
 		<div class="row" style="margin-top: 5%; margin-bottom: 5%;">
 			<div class="col-md-6" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-right">
 				<h2>Mosaik Musik hadir untuk kamu!</h2>
-				<p style='font-size: 24px;'>Musik adalah topik menarik untuk diulas. Kamu-kamu ingin tahu lebih lanjut tentang musik? Mulai dari sejarah hingga genre musik, kami hadirkan untuk kamu.</p>
+				<p style='font-size: 20px;'>Musik adalah topik menarik untuk diulas. Kamu-kamu ingin tahu lebih lanjut tentang musik? Mulai dari sejarah hingga genre musik, kami hadirkan untuk kamu.</p>
 			</div>
 			<div class="col-md" data-aos-offset="100" data-aos-delay="50" data-aos-duration="1500" data-aos="fade-left">
 				<img src="asset/sporty-girl.jpg" width="100%" height="auto">
@@ -91,7 +91,7 @@
 	</div>
 
 	<div class="footer">
-		<p style="text-align: center; font-size: 24px;"><img src="asset/logo-transparan.png" width="24" height="auto">osaik Musik &copy; Sublime Team 2019 <br/>
+		<p style="text-align: center; font-size: 20px;"><img src="asset/logo-transparan.png" width="24" height="auto">osaik Musik &copy; Sublime Team 2019 <br/>
 			<a href="./kontak.html" target="_blank" class="btn btn-white btn-animation-1">Hubungi Kami</a>
 		</p>
 	</div>
