--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
 	<title>Mosaik Musik</title>
+	<script>
+	    $(document).ready(function(){
+	      $(".preloader").fadeOut();
+	    })
+    </script>
 </head>
 
 <body>
+	<div class="preloader">
+      <div class="loading">
+        <img src="asset/play.gif" width="100%" height="auto" style="border-radius: 50%;"><br/><br/>
+        <p style="text-align: center; font-size: 24px;">Mosaik Musik hadir sebentar lagi</p>
+      </div>
+    </div>
+
 	<div class="header">
 		<div class="welcome" data-aos-offset="50" data-aos-delay="50" data-aos-duration="2000" data-aos="fade">
 			<h2 style="font-size: 4em;">Selamat Datang di</h2>
