--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
 	<title>Mosaik Musik</title>
-	<script>
-	    $(document).ready(function(){
-	      $(".preloader").fadeOut();
-	    })
-    </script>
+	<script type="text/javascript">
+		$(window).load(function() {
+		    $(".loader").fadeOut("slow");
+		});
+	</script>
 </head>
 
 <body>
