--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
 	<title>Mosaik Musik</title>
 	<script type="text/javascript">
-		$(window).load(function() {
-		    $(".loader").fadeOut("slow");
-		});
+	    $(document).ready(function(){
+	      $(".preloader").fadeOut(5000);
+	    })
 	</script>
 </head>
 
