Update menu kontak

--- a/kontak.html
+++ b/kontak.html
@@ -14,20 +14,17 @@
 </head>
 
 <body>
-<input type="checkbox" id="navcheck" role="button" title="menu">
-<label for="navcheck" aria-hidden="true" title="menu">
-	<span class="burger">
-		<span class="bar">
-			<span class="visuallyhidden">Menu</span>
-		</span>
-	</span>
-</label>
-<nav id="menu">
-	<a href="./index.html"><i class="fas fa-home"></i> Beranda</a>
-	<a href="./sejarah.html"><i class="fas fa-history"></i> Sejarah</a>
-	<a href="./genre.html"><i class="fas fa-compact-disc"></i> Genre</a>
-	<a href="./kuis.html"><i class="fas fa-question-circle"></i> Kuis</a>
-	<a href="./kontak.html"><i class="fas fa-phone-alt"></i> Kontak</a>
+
+<nav>
+	<a href="./index.html"><img id="logo" src="asset/logo-transparan.png"></a>
+	<ul>
+		<li><a href="./index.html" target="_blank">Beranda</a></li>
+		<li><a href="./sejarah.html" target="_blank">Sejarah</a></li>
+		<li><a href="./genre.html" target="_blank">Genre</a></li>
+		<li><a href="./kuis.html" target="_blank">Kuis</a></li>
+		<li><a href="./kontak.html" target="_blank">Kontak</a></li>
+		
+	</ul>
 </nav>
 
 <div class="contactFrm">
