--- a/kontak.html
+++ b/kontak.html
@@ -16,8 +16,8 @@
 <body>
 
 <nav>
-	<a href="./index.html"><img id="logo" src="asset/logo-transparan.png"></a>
 	<ul>
+		<li><a href="./index.html" target="_blank">Beranda</a></li>
 		<li><a href="./sejarah.html" target="_blank">Sejarah</a></li>
 		<li><a href="./genre.html" target="_blank">Genre</a></li>
 		<li><a href="./kuis.html" target="_blank">Kuis</a></li>
