Update nav kontak

--- a/kontak.html
+++ b/kontak.html
@@ -21,7 +21,7 @@
 		<li><a href="./sejarah.html" target="_blank">Sejarah</a></li>
 		<li><a href="./genre.html" target="_blank">Genre</a></li>
 		<li><a href="./kuis.html" target="_blank">Kuis</a></li>
-		<li><a href="./kontak.html" target="_blank">Kontak</a></li>
+		<li><a href="./kontak.html">Kontak</a></li>
 	</ul>
 </nav>
 
