Update many things inc sejarah

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -46,7 +46,7 @@
 			<h2>Mosaik musik adalah tempat yang tepat</h2>
 			<p id='demo' style='display: none; font-size: 24px;'>Tempat yang tepat bagi kamu-kamu yang senang bereksplorasi dalam musik, yang percaya bahwa <i>music is my life</i>, musik adalah hidupmu. Eits, bagi kamu yang di sini karena<i>nyasar</i>, jangan khawatir, karena di sini tersimpan petualangan menyenangkan yang menantimu.</p><br/><br/><br/><br/>
 			<div id=button-2 data-aos-offset="50" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">     
-				<a href="#mosaik-musik" onclick="toggleText()" class="btn btn-blue btn-animation-1">Tempat yang tepat???</a>
+				<a href="#mosaik-musik" onclick="toggleText(); style.display = 'none'" class="btn btn-blue btn-animation-1">Tempat yang tepat???</a>
 			</div>
 		</div>
 	</div><br/><br/>
