--- a/genre.html
+++ b/genre.html
@@ -18,7 +18,7 @@
 	<title>Mosaik Musik</title>
 </head>
 
-<body>
+<body id="genre">
 	<nav>
 		<ul>
 			<li><a href="./index.html" target="_blank">Beranda</a></li>
@@ -278,6 +278,8 @@
 		</div>
 	</div>
 
+<button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#genre"><i class="fas fa-3x fa-arrow-circle-up"></i></a></button>
+
 <script>
     var swiper = new Swiper('.swiper-container', {
       effect: 'coverflow',
@@ -310,6 +312,22 @@ $(document).ready(function(){
     }
   });
 });
+</script>
+<script>
+	mybutton = document.getElementById("myBtn");
+		window.onscroll = function() {scrollFunction()};
+
+		function scrollFunction() {
+		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+		    mybutton.style.display = "block";
+		  } else {
+		    mybutton.style.display = "none";
+		  }
+		}
+		function topFunction() {
+		  document.body.scrollTop = 0; 
+		  document.documentElement.scrollTop = 0; 
+		}
 </script>
 </body>
 </html>
