Update animation aos

--- a/genre.html
+++ b/genre.html
@@ -138,7 +138,7 @@
 	</div>
 
 	<div class="container" id="musik-klasik"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-klasik.jpg" width="100%">
@@ -153,7 +153,7 @@
 	</div>
 
 	<div class="container" id="musik-jazz"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-jazz.jpg" width="100%">
@@ -167,7 +167,7 @@
 	</div>
 
 	<div class="container" id="musik-rock"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-rock.jpg" width="100%">
@@ -181,7 +181,7 @@
 	</div>
 
 	<div class="container" id="musik-metalcore"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-metalcore.jpg" width="100%">
@@ -195,7 +195,7 @@
 	</div>
 
 	<div class="container" id="musik-hiphop"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-hiphop.jpg" width="100%">
@@ -209,7 +209,7 @@
 	</div>
 
 	<div class="container" id="musik-pop"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-pop.png" width="100%">
@@ -223,7 +223,7 @@
 	</div>
 
 	<div class="container" id="musik-tradisional"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-tradisional.jpg" width="100%">
@@ -237,7 +237,7 @@
 	</div>
 
 	<div class="container" id="musik-latin"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-latin.jpg" width="100%">
@@ -251,7 +251,7 @@
 	</div>
 
 	<div class="container" id="musik-country"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">
 					<img src="asset/musik-country.jpg" width="100%">
@@ -265,7 +265,7 @@
 	</div>
 
 	<div class="container" id="musik-dangdut"><br/><br/>
-		<div class="row">
+		<div class="row" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000" data-aos="fade-up">
 			<div class="col-md-4">
 				<div class="image-box">		
 					<img src="asset/musik-dangdut.jpg" width="100%">
@@ -328,6 +328,10 @@ $(document).ready(function(){
 		  document.body.scrollTop = 0; 
 		  document.documentElement.scrollTop = 0; 
 		}
+</script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
 </script>
 </body>
 </html>
