Update title and nav

--- a/kontak.html
+++ b/kontak.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="fontawesome/css/all.css">
 	<link href="https://fonts.googleapis.com/css?family=Asap|Prompt&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
-	<title>Mosaik Musik</title>
+	<title>Kontak | Mosaik Musik</title>
 </head>
 
 <body>
