--- a/kuis.html
+++ b/kuis.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/animate/animate.css">
 		<link href="https://fonts.googleapis.com/css?family=Asap|Prompt&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="asset/logo-transparan.png">
-		<title>Mosaik Musik</title>
+		<title>Kuis | Mosaik Musik</title>
 	</head>
 	<body>
 		<nav>
