--- a/genre.html
+++ b/genre.html
@@ -15,7 +15,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/swiper.min.js"></script>
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
-	<title>Mosaik Musik</title>
+	<title>Genre | Mosaik Musik</title>
 </head>
 
 <body id="genre">
@@ -23,9 +23,9 @@
 		<ul>
 			<li><a href="./index.html" target="_blank">Beranda</a></li>
 			<li><a href="./sejarah.html" target="_blank">Sejarah</a></li>
-			<li><a href="./genre.html" target="_blank">Genre</a></li>
+			<li><a href="./genre.html">Genre</a></li>
 			<li><a href="./kuis.html" target="_blank">Kuis</a></li>
-			<li><a href="./kontak.html">Kontak</a></li>
+			<li><a href="./kontak.html" target="_blank">Kontak</a></li>
 		</ul>
 	</nav>
 
