--- a/sejarah.html
+++ b/sejarah.html
@@ -15,7 +15,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
 	<link rel="shortcut icon" href="asset/logo-transparan.png">
-	<title>Mosaik Musik</title>
+	<title>Sejarah | Mosaik Musik</title>
 </head>
 
 <script src="js/bootstrap.min.js"></script>
