Update teks sejarah

--- a/sejarah.html
+++ b/sejarah.html
@@ -88,8 +88,8 @@
 	        <img src="asset/modern-music.jpg" index="5">
 	      </div>
 	      <div class="blog-slider__content">
-	        <div class="blog-slider__title">Modern/Kontemporer (1900-2000an)</div>
-	        <div class="blog-slider__text">Setelah penemuan radio, musik menjadi lebih sering terdengar oleh kita, begitu juga dengan televisi yang turut memengaruhi era ini, membawa musik menjadi produk dari budaya massa. Musik juga berevolusi hingga menciptakan berbagai jenis atau aliran musik, tempo atau bahkan temponya.</div>
+	        <div class="blog-slider__title">Kontemporer (1900-2000an)</div>
+	        <div class="blog-slider__text">Kontemporer atau disebut juga era modern. Setelah penemuan radio, musik menjadi lebih sering terdengar oleh kita, begitu juga dengan televisi yang turut memengaruhi era ini, membawa musik menjadi produk dari budaya massa. Musik juga berevolusi hingga menciptakan berbagai jenis atau aliran musik, tempo atau bahkan temponya.</div>
 	      </div>
 	    </div>
 
