--- a/kuis.html
+++ b/kuis.html
@@ -25,6 +25,10 @@
             <h1 class="animated infinite pulse">Kuis</h1>
    			<br/>
   			<div id="quiz"></div><br/>
+  				<label class="answer"><input type="radio" name="answer"/><span id="opt1"></span></label>
+  				<label class="answer"><input type="radio" name="answer"/><span id="opt2"></span></label>
+  				<label class="answer"><input type="radio" name="answer"/><span id="opt3"></span></label>
+  				<label class="answer"><input type="radio" name="answer"/><span id="opt4"></span></label>
     		<a href="#" id="next"><i class="fas fa-2x fa-arrow-circle-right"></i></a>
     		<a href="#" id="prev"><i class="fas fa-2x fa-arrow-circle-left"></i></a> 
     	</div>
