--- a/kuis.html
+++ b/kuis.html
@@ -5,13 +5,15 @@
 		<link rel="stylesheet" href="fontawesome/css/all.css">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/style-kuis.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/animate/animate.css">
 		<link href="https://fonts.googleapis.com/css?family=Asap|Prompt&display=swap" rel="stylesheet">
 		<link rel="shortcut icon" href="asset/logo-transparan.png">
 		<title>Kuis | Mosaik Musik</title>
+
 	</head>
 	<body>
-		<nav>
+		<!--<nav>
 			<ul>
 				<li><a href="./index.html" target="_blank">Beranda</a></li>
 				<li><a href="./sejarah.html" target="_blank">Sejarah</a></li>
@@ -19,7 +21,35 @@
 				<li><a href="./kuis.html">Kuis</a></li>
 				<li><a href="./kontak.html" target="_blank">Kontak</a></li>
 			</ul>
-		</nav>
+		</nav>-->
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+
+    <div class="container">
+        <button id="nav-btn" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDiv" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarDiv">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html" target="_blank" data-toggle="collapse" data-target=".navbar-collapse.show">Beranda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./sejarah.html" target="_blank"  data-toggle="collapse" data-target=".navbar-collapse.show">Sejarah</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./genre.html" target="_blank"  data-toggle="collapse" data-target=".navbar-collapse.show">Genre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./kuis.html" data-toggle="collapse" data-target=".navbar-collapse.show">Kuis</a> <span class="sr-only">(current)</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./kontak.html" target="_blank"  data-toggle="collapse" data-target=".navbar-collapse.show">Kontak</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 		<div id="container">
             <h1 class="animated infinite pulse">Kuis</h1>
@@ -32,7 +62,8 @@
     		<a href="#" id="next"><i class="fas fa-2x fa-arrow-circle-right"></i></a>
     		<a href="#" id="prev"><i class="fas fa-2x fa-arrow-circle-left"></i></a> 
     	</div>
-        <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+    	<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+    	<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script src="js/kuis.js"></script>
 	</body>
 </html>
